# arips_ros

./: .gitignore  README.md  installation.md
arips_arm_description/: CMakeLists.txt  package.xml
arips_arm_ik_plugin/: CMakeLists.txt  arips_ik_plugin.xml  package.xml
arips_arm_msgs/: CMakeLists.txt  package.xml
arips_arm_node/: CMakeLists.txt  package.xml
arips_auto_dock/: CMakeLists.txt  package.xml  setup.py
arips_battery_controller/: CMakeLists.txt  README.md  package.xml  setup.py
arips_calibration/: CMakeLists.txt  package.xml  setup.py
arips_calibration_scripts/: CMakeLists.txt  package.xml  readme.md  setup.py
arips_charger_dock/: CMakeLists.txt  package.xml
arips_costmap/: CMakeLists.txt  package.xml
arips_dashboard/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
arips_dashboard/plugins/: plugin.xml
arips_dashboard/scripts/: arips_dashboard
arips_dashboard/src/arips_dashboard/: dashboard.py
arips_depthimage_to_laserscan/: CMakeLists.txt  package.xml
arips_description/: CMakeLists.txt  package.xml
arips_detection/: CMakeLists.txt  package.xml
arips_gazebo/: CMakeLists.txt  package.xml
arips_groundplane_segmentation/: CMakeLists.txt  package.xml
arips_launch/: CMakeLists.txt  package.xml
arips_launch/alvar/: MarkerData_0_1_2.xml  MarkerData_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15.xml  MarkerData_33_34_35_36.xml  _MarkerData_0_1_2.xml
arips_launch/capability/: ar_markers_interface.yaml  ar_markers_provider.yaml  arips_interface.yaml  arips_provider.yaml  arm_interface.yaml  arm_provider.yaml  back_camera_interface.yaml  back_camera_provider.yaml  base_power_interface.yaml  base_power_provider.yaml  kinect_interface.yaml  kinect_provider.yaml  lidar_interface.yaml  lidar_provider.yaml  localization_interface.yaml  localization_provider.yaml  md25_interface.yaml  md25_provider.yaml  scene_detection_interface.yaml  scene_detection_provider.yaml  shutdown_interface.yaml  shutdown_provider.yaml  teleop_interface.yaml  teleop_joy_interface.yaml  teleop_joy_provider.yaml  teleop_provider.yaml  user_interaction_interface.yaml  user_interaction_provider.yaml
arips_launch/capability_launch/: cap_md25_joy.launch  cap_shutdown.launch
arips_launch/config/: Servo calibration.ods  base_local_planner_params.yaml  classifier.yaml  costmap_common_params.yaml  docking_costmap.yaml  global_costmap_params.yaml  karto_mapper_params.yaml  local_costmap_params.yaml  mapper_params_offline.yaml  mapper_params_offline_async.yaml  mapper_params_offline_sync.yaml  move_base_params.yaml  nav2d_costmap.yaml  nav2d_navigator.yaml  nav2d_ros.yaml  scs_servo_params.yaml
arips_launch/config/19.02.2014/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
arips_launch/config/22.10.2013/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
arips_launch/config/odom/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
arips_launch/config/stage/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
arips_launch/config/tmp/: base_local_planner_params.yaml  costmap_common_params.yaml
arips_launch/config/turtlebot/: costmap_common_params.yaml
arips_launch/config/working/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
arips_launch/configuration_files/: arips_lidar_2d.lua  arips_lidar_2d_localization.lua  arips_lidar_3d.lua
arips_launch/launch/: _kinect.launch  alvar.launch  alvar_back_cam.launch  alvar_bundle_calibration.launch  alvar_no_kinect.launch  app_manager.launch  arduino.launch  arips.launch  arips_node.launch  arips_simul.launch  arips_with_localization.launch  arm.launch  aruco.launch  aruco_back.launch  base_power.launch  calibrate.launch  calibrate_kinect_base.launch  cartographer.launch  cartographer_3d.launch  cartographer_localization.launch  demo_door.launch  face_detector.narrow.launch  face_detector.rgbd.launch  gmapping_arips.launch  gmapping_arips_precise.launch  hardware.launch  hardware_base_lidar.launch  hardware_base_lidar_kinect.launch  hardware_base_lidar_map.launch  hardware_no_lidar.launch  hector_mapping.launch  joy_teleop.launch  karto_slam.launch  keyboard_teleop.launch  kinect.launch  kinect_only_fullres.launch  laser_filters.launch  laser_scan_assembler.launch  laser_scan_matcher.launch  laser_scan_matcher_test.launch  (+31 more)
arips_launch/launch/includes/: frames.launch
arips_launch/launch/includes/3dsensor/: kinect.launch.xml  kinect_frames.launch  openni.launch
arips_launch/scripts/: rhasspy.sh
arips_launch/stage/: map.pgm  world.pgm  world.world
arips_launch/test/: SAC.launch  SAC_convex_hull.launch
arips_monitor/: CMakeLists.txt  package.xml  setup.py
arips_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
arips_msgs/: CMakeLists.txt  package.xml
arips_navigation/: CMakeLists.txt  package.xml
arips_navigation_debugging/: CMakeLists.txt  package.xml
arips_node/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  package.xml
arips_parameter_proxy/: CMakeLists.txt  package.xml
arips_scene_detection/: CMakeLists.txt  package.xml
arips_scripts/: CMakeLists.txt  package.xml  setup.py
arips_semantic_map/: CMakeLists.txt  package.xml  setup.py
arips_semantic_map_msgs/: CMakeLists.txt  package.xml
arips_semantic_map_msgs/msg/: Door.msg  SemanticMap.msg
arips_tf/: CMakeLists.txt  package.xml
arips_user_interaction/: CMakeLists.txt  package.xml  setup.py
arips_web_dashboard/: CMakeLists.txt  package.xml
arips_world_model/: .clang-format  CMakeLists.txt  package.xml
doc/: battery_controller.odg  hw_overview.odg  workspace.md
door_handle_detection/: CMakeLists.txt  package.xml
maps/: apartement2.pgm  apartement2.yaml  appartment1.pgm  appartment1.yaml  lab_map_1.pgm  lab_map_1.yaml  lab_map_2.pgm  lab_map_2.yaml  lab_map_3.pgm  lab_map_3.yaml  lu.pgm  single_room.yaml
rhasspy_config/: sentences.ini
(+499 files in other folders)
