<?xml version="1.0"?>
<package>
  <name>arips_launch</name>
  <version>0.0.0</version>
  <description>The arips_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgdo@todo.todo">jgdo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/arips_launch</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
      
      <capability_interface>
        capability/arips_interface.yaml
      </capability_interface>
      <capability_provider>
        capability/arips_provider.yaml
      </capability_provider>

      <capability_interface>
        capability/teleop_joy_interface.yaml
      </capability_interface>
      <capability_provider>
        capability/teleop_joy_provider.yaml
      </capability_provider>
      
      <capability_interface>
        capability/base_power_interface.yaml
      </capability_interface>
      <capability_provider>
        capability/base_power_provider.yaml
      </capability_provider>
      
      <capability_interface>
        capability/md25_interface.yaml
      </capability_interface>
      <capability_provider>
        capability/md25_provider.yaml
      </capability_provider>
        
      <capability_interface>
        capability/shutdown_interface.yaml
      </capability_interface>
      <capability_provider>
        capability/shutdown_provider.yaml
      </capability_provider>
  </export>
</package>
