<?xml version="1.0"?>
<package format="2">
  <name>arips_semantic_map_msgs</name>
  <version>0.0.0</version>
  <license>BSD</license>
  <description>"arips semantic map msgs"</description>
  <maintainer email="markprediger@gmail.com">Mark Prediger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
